# Corresponsal

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: _KEYMAP.INI  logback.xml
app/src/main/assets/print-template/: index.html
app/src/main/cpp/Bancolombia/: Transferencia_bancolombia.cpp  anulacion_bancolombia.cpp  cierre_bancolombia.cpp  deposito.cpp  duplicado_bancolombia.cpp  giros_bancolombia.cpp  pagoProducto.cpp  recaudo_bancolombia.cpp  retiro_bancolombia.cpp  saldo_bancolombia.cpp  utilidadesBancolombia.cpp
app/src/main/cpp/Base/: Archivos.cpp  Inicializacion.cpp  Mensajeria.cpp  Reportes.cpp  Utilidades.cpp  comunicaciones.cpp  configuracion.cpp  menu.cpp  native-lib.cpp
app/src/main/cpp/Caja/: CajaIP.cpp  Cajas.cpp  Mensajeria_caja.cpp
app/src/main/cpp/LifeMiles/: lealtad.cpp
app/src/main/cpp/Venta/: anulacion_venta.cpp  cierre_venta.cpp  consultas_informacion_costos.cpp  core_venta.cpp  dcc_proceso.cpp  dinero_electronico.cpp  duplicado_venta.cpp  emv_venta.cpp  manejo_impuestos.cpp  puntosColombia.cpp  qr_code_venta.cpp  saldo_venta.cpp  utilidades_qr_code.cpp
app/src/main/cpp/include/: Archivos.h  Cajas.h  Definiciones.h  Inicializacion.h  Mensajeria.h  NDK.h  Tipo_datos.h  Utilidades.h  bancolombia.h  comunicaciones.h  configuracion.h  lealtad.h  native-lib.h  venta.h
app/src/main/res/anim/: from_botton.xml  from_top.xml  no_change.xml
app/src/main/res/drawable/: borde_logo_comercio.xml  boton_inicio.xml  estado_activo_mpos.xml  estado_inactivo_mpos.xml  fondo_cupo_tarjeta.xml  fondo_gif.xml  fondo_loader.xml  fondo_pop_up.xml  header_line.xml  ic_configuracion.xml  input_form.xml  menu_fondo.xml  spinner_style.xml  sw_thumb.xml  sw_track.xml
app/src/main/res/drawable-xxxhdpi/: boton_home.xml  texto_home.xml  texto_home_verde.xml
app/src/main/res/layout/: activity_base.xml  activity_log_in.xml  activity_main.xml  activity_pantalla_cambio_contrasena.xml  activity_pantalla_cancelar_giro_cantidad.xml  activity_pantalla_cancelar_giro_datos_beneficiario.xml  activity_pantalla_cancelar_giro_datos_girador.xml  activity_pantalla_cancelar_giro_pin_referencia.xml  activity_pantalla_cantidad_pago_facturas.xml  activity_pantalla_cartera_numero_pagare.xml  activity_pantalla_confirmacion.xml  activity_pantalla_consulta_saldo_lectura.xml  activity_pantalla_consulta_saldo_tipo_cuenta.xml  activity_pantalla_copia_correo.xml  activity_pantalla_deposito_datos_depositante.xml  activity_pantalla_enviar_giro_cantidad.xml  activity_pantalla_enviar_giro_datos_beneficiario.xml  activity_pantalla_enviar_giro_datos_girador.xml  activity_pantalla_inicial_administrador.xml  activity_pantalla_inicial_duplicado.xml  activity_pantalla_inicial_giros.xml  activity_pantalla_inicial_pago_facturas.xml  activity_pantalla_inicial_pago_productos_b_c_o.xml  activity_pantalla_inicial_retiro.xml  activity_pantalla_inicial_usuario_comun.xml  activity_pantalla_olvide_mi_contrasena.xml  activity_pantalla_pago_facturas_manual.xml  activity_pantalla_pago_facturas_manual_convenio.xml  activity_pantalla_pago_facturas_manual_cuenta_recaudadora.xml  activity_pantalla_recarga_cantidad.xml  activity_pantalla_recarga_celular.xml  activity_pantalla_reclamar_giro_datos_beneficiario.xml  activity_pantalla_reclamar_giro_numero_referencia.xml  activity_pantalla_resultado_transaccion_exitosa.xml  activity_pantalla_resultado_transaccion_fallida.xml  activity_pantalla_resultado_transaccion_loader.xml  activity_pantalla_resultado_transaccion_loader_fallida.xml  activity_pantalla_retiro_con_tarjeta_cantidad.xml  activity_pantalla_retiro_con_tarjeta_loader.xml  activity_pantalla_retiro_con_tarjeta_tipo_de_cuenta.xml  (+45 more)
app/src/main/res/menu/: menu_administrador.xml  (+2 more)
(+158 files in other folders)
